# The-Rogue-Fantasy

./: .gitignore  CMakeLists.txt  README.md
data/: Leaderboard.txt  savedGame.json
include/: Animacao.h  Animacao_Composta.h  Animacao_Simples.h  Coordenadas.h  DebugText.h  Ente.h  Entidade.h  Fase.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h  Gerenciador_Input.h  Jogador.h  Jogo.h  Lista.h  Personagem.h
include/Controle/: Assunto.h  Controle_Jogador.h  Controle_Menu.h  Observador.h  Texto_Input.h
include/ElementosGraficos/: Animacao.h  Botao.h  Texto.h
include/Entidades/: Entidade.h  Goblin.h  Inimigo.h  Jogador.h  Obstaculo.h  Personagem.h  Plataforma.h
include/Estados/: Estado.h
include/Fabricas/: Fabrica_Aranha.h  Fabrica_Caixa.h  Fabrica_Cavaleiro.h  Fabrica_Entidades.h  Fabrica_Espinho.h  Fabrica_Goblin.h  Fabrica_Jogador.h  Fabrica_Plataforma.h  Fabrica_Porta.h
include/Fases/: Castelo.h  Fase.h  Fase1.h  Fase2.h  Floresta.h
include/Gerenciadores/: Gerenciador_Colisoes.h  Gerenciador_Estados.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h  Gerenciador_Input.h
include/Listas/: Lista.h  Lista_Entidades.h
maps/: mapaCastelo.txt  mapaFloresta.txt
src/: Animacao.cpp  Animacao_Composta.cpp  Animacao_Simples.cpp  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  Fase.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp  Gerenciador_Grafico.h  Gerenciador_Input.cpp  Jogador.cpp  Jogo.cpp  Jogo.h  Personagem.cpp  Personagem.h  main.cpp
src/Controle/: Assunto.cpp  Controle_Jogador.cpp  (+3 more)
uml/: DiagramaAtual.mdj  diagrama-1a_reuniao.mdj  diagrama.uml
(+73 files in other folders)
